# send-suite

./: .gitignore  .gitmodules  .npmrc  README.md  clean.sh  compose.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  lerna.json  package.json  playwright.config.ts  pnpm-lock.yaml  pre-flight.sh  xlerna.json
.husky/: pre-commit
backend/: .env.sample  .gitignore  .prettierignore  Dockerfile  Dockerfile-debug  ava.config.mjs  compose.yml  deploy.dockerfile  dev.env  eslint.config.mjs  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.js
docs/: Encryption.md  EngDesignDoc.md  Lockbox.md  README.md
e2e/: locators.ts  lockbox.spec.ts  send.spec.ts  testUtils.ts
extension/: README.md  build.sh  index.extension-settings.html  index.extension-ui.html  index.html  index.management.html  index.service-page.html  index.tabs.html  index.test.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.lib.js  vite.config.service-page.js
frontend/: .env.sample  .prettierignore  .prettierrc  Dockerfile  README.md  build.sh  compose.yml  dev.env  eslint.config.js  eslint.config.mjs  eslint.config.ts  example.env  index.extension.html  index.html  index.management.html  package.json  pnpm-lock.yaml  sharedViteConfig.ts  tailwind.config.js  tsconfig.json  vite.config.extension.js  vite.config.js  vite.config.management.js  vitest.config.js  (+2 more)
pulumi/: Pulumi.ci.yaml  Pulumi.prod.yaml  Pulumi.stage.yaml  Pulumi.staging.yaml  README.md  __main__.py  config.ci.yaml  config.prod.yaml  config.stage.yaml  config.staging.yaml  delete-ci-secrets.sh  pyproject.toml  requirements.txt  tb_pulumi
(+443 files in other folders)
