[project]
name = "send-suite-pulumi"
version = "0.0.1"
description = "Pulumi-built infrastructure for send-suite"
requires-python = ">3.12"
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/thunderbird/send-suite.git"
issues = "https://github.com/thunderbird/send-suite/issues?q=is%3Aopen+is%3Aissue+label%3Apulumi"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# Ruff
[tool.ruff]
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "venv",
]

# Always generate Python 3.12-compatible code.
target-version = "py312"

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10